# mGE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/events/: CMakeLists.txt  events.hh  events_application.cc  events_application.hh  events_layer.cc  events_layer.hh  figure_event.hh  figure_vertex.hh  main.cc
examples/instancing/: CMakeLists.txt  (+5 more)
src/: CMakeLists.txt  application.cc  application.hh  logger.cc  logger.hh  main.cc  mge_assert.hh  mgepch.cc  mgepch.hh  render_context.cc  render_context.hh  shader_system.cc  shader_system.hh  timer.cc  timer.hh  ui_manager.cc  ui_manager.hh  utils.hh  window.cc  window.hh  window_manager.cc  window_manager.hh
src/events/: camera_event.hh  entity_event.hh  event.hh  event_manager.cc  event_manager.hh  events.hh  inputs.hh  keyboard_event.hh  light_event.hh  mouse_event.hh  raycaster_event.hh  render_mode_event.hh  standard_events.hh  tag_event.hh  window_event.hh
src/layers/: layer.hh  layer_stack.cc  layer_stack.hh
src/math/: mat2.hh  mat3.hh  mat4.hh  matrix_operations.hh  quat.hh  vec2.hh  vec3.hh  vec4.hh
src/mge/: mge.cc  mge.hh
src/render_api/: buffer.hh  opengl_utils.hh  shader.cc  shader.hh  shader_program.cc  shader_program.hh  texture.cc  texture.hh  uniform.hh  uniform_types.hh  vertex_array.hh
src/renderer/: adaptive_raycaster.cc  adaptive_raycaster.hh  camera.cc  camera.hh  canvas.cc  canvas.hh  cpu_bitmap.cc  cpu_bitmap.hh  drawable.hh  gpu_canvas.cc  gpu_canvas.hh  light.hh  material.hh  renderer.cc  renderer.hh
src/renderer/camera/: anaglyph_camera.cc  anaglyph_camera.hh  base_camera.cc  base_camera.hh  camera.cc  camera.hh
src/renderer/pipeline/: render_pipeline.cc  render_pipeline.hh  render_pipeline_action.hh  render_pipeline_builder.cc  render_pipeline_builder.hh
src/renderer/scene/: entity.hh  scene.cc  scene.hh
src/renderer/scene/components/: components.hh  renderable_component.hh  tag_component.hh  transform_component.hh
(+20 files in other folders)
